lang.output
Terminais sem uso na gramática

    T_Func
    T_OpenCloseParen
    T_Quote
    T_Dot
    T_BackSlash
    T_UnderScore
    T_Percent
    T_ComercialAND
    T_Return
    T_Biblioteca


Gramática

    0 $accept: program $end

    1 $@1: %empty

    2 program: $@1 lines

    3 lines: lines line
    4      | %empty

    5 line: T_EndLine
    6     | variable_declaration T_DotComma
    7     | attribution T_DotComma
    8     | function_usage T_DotComma
    9     | logical_structure
   10     | import T_DotComma
   11     | T_Comment

   12 import: T_Import T_Identificador

   13 variable_declaration: T_Let T_Identificador T_Equals variable
   14                     | T_Const T_Identificador T_Equals variable

   15 attribution: T_Identificador attribution_right

   16 attribution_right: T_Equals variable
   17                  | T_Plus T_Equals variable
   18                  | T_Minus T_Equals variable
   19                  | T_Divide T_Equals variable
   20                  | T_Times T_Equals variable
   21                  | T_Plus T_Plus
   22                  | T_Minus T_Minus

   23 function_usage: T_Identificador T_OpenParen optional_params T_CloseParen

   24 logical_structure: structure_for
   25                  | structure_while
   26                  | structure_do T_DotComma
   27                  | structure_if structure_else
   28                  | structure_switch

   29 structure_for: T_For T_OpenSquareBracket T_Identificador T_doubleDot T_OpenParen type T_Comma type T_Comma type T_CloseParen T_CloseSquareBracket T_OpenBracket lines T_CloseBracket

   30 structure_if: T_If T_OpenSquareBracket logical_expression T_CloseSquareBracket T_OpenBracket lines T_CloseBracket

   31 structure_else: T_Else T_OpenBracket lines T_CloseBracket
   32               | %empty

   33 structure_switch: T_Switch T_OpenSquareBracket T_Identificador T_CloseSquareBracket T_OpenBracket structure_cases structure_default T_CloseBracket

   34 structure_cases: structure_cases structure_case
   35                | %empty

   36 structure_case: T_Case T_OpenSquareBracket type T_CloseSquareBracket T_OpenBracket lines T_CloseBracket T_EndLine
   37               | line

   38 structure_default: T_Default T_OpenBracket lines T_CloseBracket T_EndLine

   39 structure_while: T_While T_OpenSquareBracket logical_expression T_CloseSquareBracket T_OpenBracket lines T_CloseBracket

   40 structure_do: T_Do T_OpenBracket lines T_CloseBracket T_While T_OpenSquareBracket logical_expression T_CloseSquareBracket

   41 logical_expression: expression T_EqualsEQ expression
   42                   | expression T_NegativeEquals expression
   43                   | expression T_BiggerThan expression
   44                   | expression T_SmallerThan expression
   45                   | expression T_BiggerThanEQ expression
   46                   | expression T_SmallerThanEQ expression
   47                   | expression T_Or expression
   48                   | expression T_And expression
   49                   | T_Not expression

   50 variable: T_String
   51         | expression
   52         | function_usage

   53 expression: type
   54           | expression T_Plus expression
   55           | expression T_Minus expression
   56           | expression T_Times expression
   57           | expression T_Divide expression
   58           | T_Minus expression
   59           | expression T_Power expression
   60           | T_OpenParen expression T_CloseParen

   61 type: T_IntValue
   62     | T_FloatValue
   63     | T_Identificador

   64 optional_params: T_String
   65                | T_Identificador
   66                | %empty


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    T_Let (258) 13
    T_Import (259) 12
    T_Func (260)
    T_OpenParen (261) 23 29 60
    T_CloseParen (262) 23 29 60
    T_OpenCloseParen (263)
    T_OpenBracket (264) 29 30 31 33 36 38 39 40
    T_CloseBracket (265) 29 30 31 33 36 38 39 40
    T_Comma (266) 29
    T_Quote (267)
    T_DotComma (268) 6 7 8 10 26
    T_doubleDot (269) 29
    T_Dot (270)
    T_For (271) 29
    T_If (272) 30
    T_While (273) 39 40
    T_Else (274) 31
    T_Switch (275) 33
    T_Case (276) 36
    T_Default (277) 38
    T_Do (278) 40
    T_OpenSquareBracket (279) 29 30 33 36 39 40
    T_BackSlash (280)
    T_CloseSquareBracket (281) 29 30 33 36 39 40
    T_Equals (282) 13 14 16 17 18 19 20
    T_UnderScore (283)
    T_Percent (284)
    T_ComercialAND (285)
    T_Return (286)
    T_Const (287) 14
    T_EndLine (288) 5 36 38
    T_Comment (289) 11
    T_Not (290) 49
    T_EqualsEQ (291) 41
    T_NegativeEquals (292) 42
    T_Or (293) 47
    T_And (294) 48
    T_SmallerThan (295) 44
    T_SmallerThanEQ (296) 46
    T_BiggerThan (297) 43
    T_BiggerThanEQ (298) 45
    T_IntValue <ival> (299) 61
    T_FloatValue <fval> (300) 62
    T_String <sval> (301) 50 64
    T_Biblioteca <sval> (302)
    T_Identificador <sval> (303) 12 13 14 15 23 29 33 63 65
    T_Minus (304) 18 22 55 58
    T_Plus (305) 17 21 54
    T_Divide (306) 19 57
    T_Times (307) 20 56
    T_Negative (308)
    T_Power (309) 59


Não terminais com as regras onde eles aparecem

    $accept (55)
        à esquerda: 0
    program (56)
        à esquerda: 2
        à direita: 0
    $@1 (57)
        à esquerda: 1
        à direita: 2
    lines (58)
        à esquerda: 3 4
        à direita: 2 3 29 30 31 36 38 39 40
    line (59)
        à esquerda: 5 6 7 8 9 10 11
        à direita: 3 37
    import (60)
        à esquerda: 12
        à direita: 10
    variable_declaration (61)
        à esquerda: 13 14
        à direita: 6
    attribution (62)
        à esquerda: 15
        à direita: 7
    attribution_right (63)
        à esquerda: 16 17 18 19 20 21 22
        à direita: 15
    function_usage (64)
        à esquerda: 23
        à direita: 8 52
    logical_structure (65)
        à esquerda: 24 25 26 27 28
        à direita: 9
    structure_for (66)
        à esquerda: 29
        à direita: 24
    structure_if (67)
        à esquerda: 30
        à direita: 27
    structure_else (68)
        à esquerda: 31 32
        à direita: 27
    structure_switch (69)
        à esquerda: 33
        à direita: 28
    structure_cases (70)
        à esquerda: 34 35
        à direita: 33 34
    structure_case (71)
        à esquerda: 36 37
        à direita: 34
    structure_default (72)
        à esquerda: 38
        à direita: 33
    structure_while (73)
        à esquerda: 39
        à direita: 25
    structure_do (74)
        à esquerda: 40
        à direita: 26
    logical_expression <ival> (75)
        à esquerda: 41 42 43 44 45 46 47 48 49
        à direita: 30 39 40
    variable (76)
        à esquerda: 50 51 52
        à direita: 13 14 16 17 18 19 20
    expression <fval> (77)
        à esquerda: 53 54 55 56 57 58 59 60
        à direita: 41 42 43 44 45 46 47 48 49 51 54 55 56 57 58 59 60
    type <fval> (78)
        à esquerda: 61 62 63
        à direita: 29 36 53
    optional_params (79)
        à esquerda: 64 65 66
        à direita: 23


Estado 0

    0 $accept: . program $end

    $padrão  reduzir usando a regra 1 ($@1)

    program  ir ao estado 1
    $@1      ir ao estado 2


Estado 1

    0 $accept: program . $end

    $end  deslocar, e ir ao estado 3


Estado 2

    2 program: $@1 . lines

    $padrão  reduzir usando a regra 4 (lines)

    lines  ir ao estado 4


Estado 3

    0 $accept: program $end .

    $padrão  aceitar


Estado 4

    2 program: $@1 lines .
    3 lines: lines . line

    T_Let            deslocar, e ir ao estado 5
    T_Import         deslocar, e ir ao estado 6
    T_For            deslocar, e ir ao estado 7
    T_If             deslocar, e ir ao estado 8
    T_While          deslocar, e ir ao estado 9
    T_Switch         deslocar, e ir ao estado 10
    T_Do             deslocar, e ir ao estado 11
    T_Const          deslocar, e ir ao estado 12
    T_EndLine        deslocar, e ir ao estado 13
    T_Comment        deslocar, e ir ao estado 14
    T_Identificador  deslocar, e ir ao estado 15

    $padrão  reduzir usando a regra 2 (program)

    line                  ir ao estado 16
    import                ir ao estado 17
    variable_declaration  ir ao estado 18
    attribution           ir ao estado 19
    function_usage        ir ao estado 20
    logical_structure     ir ao estado 21
    structure_for         ir ao estado 22
    structure_if          ir ao estado 23
    structure_switch      ir ao estado 24
    structure_while       ir ao estado 25
    structure_do          ir ao estado 26


Estado 5

   13 variable_declaration: T_Let . T_Identificador T_Equals variable

    T_Identificador  deslocar, e ir ao estado 27


Estado 6

   12 import: T_Import . T_Identificador

    T_Identificador  deslocar, e ir ao estado 28


Estado 7

   29 structure_for: T_For . T_OpenSquareBracket T_Identificador T_doubleDot T_OpenParen type T_Comma type T_Comma type T_CloseParen T_CloseSquareBracket T_OpenBracket lines T_CloseBracket

    T_OpenSquareBracket  deslocar, e ir ao estado 29


Estado 8

   30 structure_if: T_If . T_OpenSquareBracket logical_expression T_CloseSquareBracket T_OpenBracket lines T_CloseBracket

    T_OpenSquareBracket  deslocar, e ir ao estado 30


Estado 9

   39 structure_while: T_While . T_OpenSquareBracket logical_expression T_CloseSquareBracket T_OpenBracket lines T_CloseBracket

    T_OpenSquareBracket  deslocar, e ir ao estado 31


Estado 10

   33 structure_switch: T_Switch . T_OpenSquareBracket T_Identificador T_CloseSquareBracket T_OpenBracket structure_cases structure_default T_CloseBracket

    T_OpenSquareBracket  deslocar, e ir ao estado 32


Estado 11

   40 structure_do: T_Do . T_OpenBracket lines T_CloseBracket T_While T_OpenSquareBracket logical_expression T_CloseSquareBracket

    T_OpenBracket  deslocar, e ir ao estado 33


Estado 12

   14 variable_declaration: T_Const . T_Identificador T_Equals variable

    T_Identificador  deslocar, e ir ao estado 34


Estado 13

    5 line: T_EndLine .

    $padrão  reduzir usando a regra 5 (line)


Estado 14

   11 line: T_Comment .

    $padrão  reduzir usando a regra 11 (line)


Estado 15

   15 attribution: T_Identificador . attribution_right
   23 function_usage: T_Identificador . T_OpenParen optional_params T_CloseParen

    T_OpenParen  deslocar, e ir ao estado 35
    T_Equals     deslocar, e ir ao estado 36
    T_Minus      deslocar, e ir ao estado 37
    T_Plus       deslocar, e ir ao estado 38
    T_Divide     deslocar, e ir ao estado 39
    T_Times      deslocar, e ir ao estado 40

    attribution_right  ir ao estado 41


Estado 16

    3 lines: lines line .

    $padrão  reduzir usando a regra 3 (lines)


Estado 17

   10 line: import . T_DotComma

    T_DotComma  deslocar, e ir ao estado 42


Estado 18

    6 line: variable_declaration . T_DotComma

    T_DotComma  deslocar, e ir ao estado 43


Estado 19

    7 line: attribution . T_DotComma

    T_DotComma  deslocar, e ir ao estado 44


Estado 20

    8 line: function_usage . T_DotComma

    T_DotComma  deslocar, e ir ao estado 45


Estado 21

    9 line: logical_structure .

    $padrão  reduzir usando a regra 9 (line)


Estado 22

   24 logical_structure: structure_for .

    $padrão  reduzir usando a regra 24 (logical_structure)


Estado 23

   27 logical_structure: structure_if . structure_else

    T_Else  deslocar, e ir ao estado 46

    $padrão  reduzir usando a regra 32 (structure_else)

    structure_else  ir ao estado 47


Estado 24

   28 logical_structure: structure_switch .

    $padrão  reduzir usando a regra 28 (logical_structure)


Estado 25

   25 logical_structure: structure_while .

    $padrão  reduzir usando a regra 25 (logical_structure)


Estado 26

   26 logical_structure: structure_do . T_DotComma

    T_DotComma  deslocar, e ir ao estado 48


Estado 27

   13 variable_declaration: T_Let T_Identificador . T_Equals variable

    T_Equals  deslocar, e ir ao estado 49


Estado 28

   12 import: T_Import T_Identificador .

    $padrão  reduzir usando a regra 12 (import)


Estado 29

   29 structure_for: T_For T_OpenSquareBracket . T_Identificador T_doubleDot T_OpenParen type T_Comma type T_Comma type T_CloseParen T_CloseSquareBracket T_OpenBracket lines T_CloseBracket

    T_Identificador  deslocar, e ir ao estado 50


Estado 30

   30 structure_if: T_If T_OpenSquareBracket . logical_expression T_CloseSquareBracket T_OpenBracket lines T_CloseBracket

    T_OpenParen      deslocar, e ir ao estado 51
    T_Not            deslocar, e ir ao estado 52
    T_IntValue       deslocar, e ir ao estado 53
    T_FloatValue     deslocar, e ir ao estado 54
    T_Identificador  deslocar, e ir ao estado 55
    T_Minus          deslocar, e ir ao estado 56

    logical_expression  ir ao estado 57
    expression          ir ao estado 58
    type                ir ao estado 59


Estado 31

   39 structure_while: T_While T_OpenSquareBracket . logical_expression T_CloseSquareBracket T_OpenBracket lines T_CloseBracket

    T_OpenParen      deslocar, e ir ao estado 51
    T_Not            deslocar, e ir ao estado 52
    T_IntValue       deslocar, e ir ao estado 53
    T_FloatValue     deslocar, e ir ao estado 54
    T_Identificador  deslocar, e ir ao estado 55
    T_Minus          deslocar, e ir ao estado 56

    logical_expression  ir ao estado 60
    expression          ir ao estado 58
    type                ir ao estado 59


Estado 32

   33 structure_switch: T_Switch T_OpenSquareBracket . T_Identificador T_CloseSquareBracket T_OpenBracket structure_cases structure_default T_CloseBracket

    T_Identificador  deslocar, e ir ao estado 61


Estado 33

   40 structure_do: T_Do T_OpenBracket . lines T_CloseBracket T_While T_OpenSquareBracket logical_expression T_CloseSquareBracket

    $padrão  reduzir usando a regra 4 (lines)

    lines  ir ao estado 62


Estado 34

   14 variable_declaration: T_Const T_Identificador . T_Equals variable

    T_Equals  deslocar, e ir ao estado 63


Estado 35

   23 function_usage: T_Identificador T_OpenParen . optional_params T_CloseParen

    T_String         deslocar, e ir ao estado 64
    T_Identificador  deslocar, e ir ao estado 65

    $padrão  reduzir usando a regra 66 (optional_params)

    optional_params  ir ao estado 66


Estado 36

   16 attribution_right: T_Equals . variable

    T_OpenParen      deslocar, e ir ao estado 51
    T_IntValue       deslocar, e ir ao estado 53
    T_FloatValue     deslocar, e ir ao estado 54
    T_String         deslocar, e ir ao estado 67
    T_Identificador  deslocar, e ir ao estado 68
    T_Minus          deslocar, e ir ao estado 56

    function_usage  ir ao estado 69
    variable        ir ao estado 70
    expression      ir ao estado 71
    type            ir ao estado 59


Estado 37

   18 attribution_right: T_Minus . T_Equals variable
   22                  | T_Minus . T_Minus

    T_Equals  deslocar, e ir ao estado 72
    T_Minus   deslocar, e ir ao estado 73


Estado 38

   17 attribution_right: T_Plus . T_Equals variable
   21                  | T_Plus . T_Plus

    T_Equals  deslocar, e ir ao estado 74
    T_Plus    deslocar, e ir ao estado 75


Estado 39

   19 attribution_right: T_Divide . T_Equals variable

    T_Equals  deslocar, e ir ao estado 76


Estado 40

   20 attribution_right: T_Times . T_Equals variable

    T_Equals  deslocar, e ir ao estado 77


Estado 41

   15 attribution: T_Identificador attribution_right .

    $padrão  reduzir usando a regra 15 (attribution)


Estado 42

   10 line: import T_DotComma .

    $padrão  reduzir usando a regra 10 (line)


Estado 43

    6 line: variable_declaration T_DotComma .

    $padrão  reduzir usando a regra 6 (line)


Estado 44

    7 line: attribution T_DotComma .

    $padrão  reduzir usando a regra 7 (line)


Estado 45

    8 line: function_usage T_DotComma .

    $padrão  reduzir usando a regra 8 (line)


Estado 46

   31 structure_else: T_Else . T_OpenBracket lines T_CloseBracket

    T_OpenBracket  deslocar, e ir ao estado 78


Estado 47

   27 logical_structure: structure_if structure_else .

    $padrão  reduzir usando a regra 27 (logical_structure)


Estado 48

   26 logical_structure: structure_do T_DotComma .

    $padrão  reduzir usando a regra 26 (logical_structure)


Estado 49

   13 variable_declaration: T_Let T_Identificador T_Equals . variable

    T_OpenParen      deslocar, e ir ao estado 51
    T_IntValue       deslocar, e ir ao estado 53
    T_FloatValue     deslocar, e ir ao estado 54
    T_String         deslocar, e ir ao estado 67
    T_Identificador  deslocar, e ir ao estado 68
    T_Minus          deslocar, e ir ao estado 56

    function_usage  ir ao estado 69
    variable        ir ao estado 79
    expression      ir ao estado 71
    type            ir ao estado 59


Estado 50

   29 structure_for: T_For T_OpenSquareBracket T_Identificador . T_doubleDot T_OpenParen type T_Comma type T_Comma type T_CloseParen T_CloseSquareBracket T_OpenBracket lines T_CloseBracket

    T_doubleDot  deslocar, e ir ao estado 80


Estado 51

   60 expression: T_OpenParen . expression T_CloseParen

    T_OpenParen      deslocar, e ir ao estado 51
    T_IntValue       deslocar, e ir ao estado 53
    T_FloatValue     deslocar, e ir ao estado 54
    T_Identificador  deslocar, e ir ao estado 55
    T_Minus          deslocar, e ir ao estado 56

    expression  ir ao estado 81
    type        ir ao estado 59


Estado 52

   49 logical_expression: T_Not . expression

    T_OpenParen      deslocar, e ir ao estado 51
    T_IntValue       deslocar, e ir ao estado 53
    T_FloatValue     deslocar, e ir ao estado 54
    T_Identificador  deslocar, e ir ao estado 55
    T_Minus          deslocar, e ir ao estado 56

    expression  ir ao estado 82
    type        ir ao estado 59


Estado 53

   61 type: T_IntValue .

    $padrão  reduzir usando a regra 61 (type)


Estado 54

   62 type: T_FloatValue .

    $padrão  reduzir usando a regra 62 (type)


Estado 55

   63 type: T_Identificador .

    $padrão  reduzir usando a regra 63 (type)


Estado 56

   58 expression: T_Minus . expression

    T_OpenParen      deslocar, e ir ao estado 51
    T_IntValue       deslocar, e ir ao estado 53
    T_FloatValue     deslocar, e ir ao estado 54
    T_Identificador  deslocar, e ir ao estado 55
    T_Minus          deslocar, e ir ao estado 56

    expression  ir ao estado 83
    type        ir ao estado 59


Estado 57

   30 structure_if: T_If T_OpenSquareBracket logical_expression . T_CloseSquareBracket T_OpenBracket lines T_CloseBracket

    T_CloseSquareBracket  deslocar, e ir ao estado 84


Estado 58

   41 logical_expression: expression . T_EqualsEQ expression
   42                   | expression . T_NegativeEquals expression
   43                   | expression . T_BiggerThan expression
   44                   | expression . T_SmallerThan expression
   45                   | expression . T_BiggerThanEQ expression
   46                   | expression . T_SmallerThanEQ expression
   47                   | expression . T_Or expression
   48                   | expression . T_And expression
   54 expression: expression . T_Plus expression
   55           | expression . T_Minus expression
   56           | expression . T_Times expression
   57           | expression . T_Divide expression
   59           | expression . T_Power expression

    T_EqualsEQ        deslocar, e ir ao estado 85
    T_NegativeEquals  deslocar, e ir ao estado 86
    T_Or              deslocar, e ir ao estado 87
    T_And             deslocar, e ir ao estado 88
    T_SmallerThan     deslocar, e ir ao estado 89
    T_SmallerThanEQ   deslocar, e ir ao estado 90
    T_BiggerThan      deslocar, e ir ao estado 91
    T_BiggerThanEQ    deslocar, e ir ao estado 92
    T_Minus           deslocar, e ir ao estado 93
    T_Plus            deslocar, e ir ao estado 94
    T_Divide          deslocar, e ir ao estado 95
    T_Times           deslocar, e ir ao estado 96
    T_Power           deslocar, e ir ao estado 97


Estado 59

   53 expression: type .

    $padrão  reduzir usando a regra 53 (expression)


Estado 60

   39 structure_while: T_While T_OpenSquareBracket logical_expression . T_CloseSquareBracket T_OpenBracket lines T_CloseBracket

    T_CloseSquareBracket  deslocar, e ir ao estado 98


Estado 61

   33 structure_switch: T_Switch T_OpenSquareBracket T_Identificador . T_CloseSquareBracket T_OpenBracket structure_cases structure_default T_CloseBracket

    T_CloseSquareBracket  deslocar, e ir ao estado 99


Estado 62

    3 lines: lines . line
   40 structure_do: T_Do T_OpenBracket lines . T_CloseBracket T_While T_OpenSquareBracket logical_expression T_CloseSquareBracket

    T_Let            deslocar, e ir ao estado 5
    T_Import         deslocar, e ir ao estado 6
    T_CloseBracket   deslocar, e ir ao estado 100
    T_For            deslocar, e ir ao estado 7
    T_If             deslocar, e ir ao estado 8
    T_While          deslocar, e ir ao estado 9
    T_Switch         deslocar, e ir ao estado 10
    T_Do             deslocar, e ir ao estado 11
    T_Const          deslocar, e ir ao estado 12
    T_EndLine        deslocar, e ir ao estado 13
    T_Comment        deslocar, e ir ao estado 14
    T_Identificador  deslocar, e ir ao estado 15

    line                  ir ao estado 16
    import                ir ao estado 17
    variable_declaration  ir ao estado 18
    attribution           ir ao estado 19
    function_usage        ir ao estado 20
    logical_structure     ir ao estado 21
    structure_for         ir ao estado 22
    structure_if          ir ao estado 23
    structure_switch      ir ao estado 24
    structure_while       ir ao estado 25
    structure_do          ir ao estado 26


Estado 63

   14 variable_declaration: T_Const T_Identificador T_Equals . variable

    T_OpenParen      deslocar, e ir ao estado 51
    T_IntValue       deslocar, e ir ao estado 53
    T_FloatValue     deslocar, e ir ao estado 54
    T_String         deslocar, e ir ao estado 67
    T_Identificador  deslocar, e ir ao estado 68
    T_Minus          deslocar, e ir ao estado 56

    function_usage  ir ao estado 69
    variable        ir ao estado 101
    expression      ir ao estado 71
    type            ir ao estado 59


Estado 64

   64 optional_params: T_String .

    $padrão  reduzir usando a regra 64 (optional_params)


Estado 65

   65 optional_params: T_Identificador .

    $padrão  reduzir usando a regra 65 (optional_params)


Estado 66

   23 function_usage: T_Identificador T_OpenParen optional_params . T_CloseParen

    T_CloseParen  deslocar, e ir ao estado 102


Estado 67

   50 variable: T_String .

    $padrão  reduzir usando a regra 50 (variable)


Estado 68

   23 function_usage: T_Identificador . T_OpenParen optional_params T_CloseParen
   63 type: T_Identificador .

    T_OpenParen  deslocar, e ir ao estado 35

    $padrão  reduzir usando a regra 63 (type)


Estado 69

   52 variable: function_usage .

    $padrão  reduzir usando a regra 52 (variable)


Estado 70

   16 attribution_right: T_Equals variable .

    $padrão  reduzir usando a regra 16 (attribution_right)


Estado 71

   51 variable: expression .
   54 expression: expression . T_Plus expression
   55           | expression . T_Minus expression
   56           | expression . T_Times expression
   57           | expression . T_Divide expression
   59           | expression . T_Power expression

    T_Minus   deslocar, e ir ao estado 93
    T_Plus    deslocar, e ir ao estado 94
    T_Divide  deslocar, e ir ao estado 95
    T_Times   deslocar, e ir ao estado 96
    T_Power   deslocar, e ir ao estado 97

    $padrão  reduzir usando a regra 51 (variable)


Estado 72

   18 attribution_right: T_Minus T_Equals . variable

    T_OpenParen      deslocar, e ir ao estado 51
    T_IntValue       deslocar, e ir ao estado 53
    T_FloatValue     deslocar, e ir ao estado 54
    T_String         deslocar, e ir ao estado 67
    T_Identificador  deslocar, e ir ao estado 68
    T_Minus          deslocar, e ir ao estado 56

    function_usage  ir ao estado 69
    variable        ir ao estado 103
    expression      ir ao estado 71
    type            ir ao estado 59


Estado 73

   22 attribution_right: T_Minus T_Minus .

    $padrão  reduzir usando a regra 22 (attribution_right)


Estado 74

   17 attribution_right: T_Plus T_Equals . variable

    T_OpenParen      deslocar, e ir ao estado 51
    T_IntValue       deslocar, e ir ao estado 53
    T_FloatValue     deslocar, e ir ao estado 54
    T_String         deslocar, e ir ao estado 67
    T_Identificador  deslocar, e ir ao estado 68
    T_Minus          deslocar, e ir ao estado 56

    function_usage  ir ao estado 69
    variable        ir ao estado 104
    expression      ir ao estado 71
    type            ir ao estado 59


Estado 75

   21 attribution_right: T_Plus T_Plus .

    $padrão  reduzir usando a regra 21 (attribution_right)


Estado 76

   19 attribution_right: T_Divide T_Equals . variable

    T_OpenParen      deslocar, e ir ao estado 51
    T_IntValue       deslocar, e ir ao estado 53
    T_FloatValue     deslocar, e ir ao estado 54
    T_String         deslocar, e ir ao estado 67
    T_Identificador  deslocar, e ir ao estado 68
    T_Minus          deslocar, e ir ao estado 56

    function_usage  ir ao estado 69
    variable        ir ao estado 105
    expression      ir ao estado 71
    type            ir ao estado 59


Estado 77

   20 attribution_right: T_Times T_Equals . variable

    T_OpenParen      deslocar, e ir ao estado 51
    T_IntValue       deslocar, e ir ao estado 53
    T_FloatValue     deslocar, e ir ao estado 54
    T_String         deslocar, e ir ao estado 67
    T_Identificador  deslocar, e ir ao estado 68
    T_Minus          deslocar, e ir ao estado 56

    function_usage  ir ao estado 69
    variable        ir ao estado 106
    expression      ir ao estado 71
    type            ir ao estado 59


Estado 78

   31 structure_else: T_Else T_OpenBracket . lines T_CloseBracket

    $padrão  reduzir usando a regra 4 (lines)

    lines  ir ao estado 107


Estado 79

   13 variable_declaration: T_Let T_Identificador T_Equals variable .

    $padrão  reduzir usando a regra 13 (variable_declaration)


Estado 80

   29 structure_for: T_For T_OpenSquareBracket T_Identificador T_doubleDot . T_OpenParen type T_Comma type T_Comma type T_CloseParen T_CloseSquareBracket T_OpenBracket lines T_CloseBracket

    T_OpenParen  deslocar, e ir ao estado 108


Estado 81

   54 expression: expression . T_Plus expression
   55           | expression . T_Minus expression
   56           | expression . T_Times expression
   57           | expression . T_Divide expression
   59           | expression . T_Power expression
   60           | T_OpenParen expression . T_CloseParen
